# latent-journey

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  test_sentience.rs
cmd/gateway/: go.mod  main.go
docs/: 0_PRODUCT_GOAL_AND_ACCEPTANCE.md  1_GOAL_INTERPRETATION.md  2_PROBLEM_FRAMING.md  3_DESIGN_DECISIONS.md  4_SYSTEM_ARCHITECTURE.md  5_INTERFACE_AND_FLOW.md  6_TECHNICAL_ACHIEVEMENTS.md  7_SYNTHAMIND_HYPOTHESIS.md  8_SENTIENCE_DSL.md  9_THEORETICAL_IMPLEMENTATION.md  PROGRESS_CHECKLIST.md  README.md
pkg/api/: go.mod  routes.go  sse.go
screenshots/: README.md
sentience-dsl/src/: lexer.rs
services/ego-rs/: Cargo.toml
services/ego-rs/src/: config.rs  consolidation.rs  handlers.rs  lib.rs  main.rs  memory.rs  reflection.rs  types.rs
services/embeddings-rs/: Cargo.toml
services/embeddings-rs/src/: main.rs
services/id-rs/: Cargo.toml
services/id-rs/data/: memory.jsonl
services/id-rs/src/: main.rs
services/llm-py/: app.py
services/ml-py/: app.py  requirements.txt
services/sentience-rs/: Cargo.toml
services/sentience-rs/data/: memory.jsonl
services/sentience-rs/src/: main.rs
temp-sentience/: README.md
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: AudioVisualizer.tsx  CameraSection.tsx  CapturesGallery.tsx  CommandPalette.tsx  DataCleanup.tsx  EventsList.tsx  ExplorationPanel.tsx  ExplorationView.tsx  FacetDisplay.tsx  Header.tsx  JourneyTimeline.tsx  LTMExperiences.tsx  LatentInsight.tsx  LatentScatter.tsx  LatentScatter3D.tsx  LatentSpace2D.tsx  Layout.tsx  (+14 more)
(+18 files in other folders)
